# mycc

./: .gitignore  BNF  CMakeLists.txt  README.md  main.cpp
includes/ast/: ast.h
includes/lex/: lex.h
includes/parser/: parser.h
includes/sema/: Sema.h  SymbolTable.h  ast.h  ast1.h  operator.h  qualifiedType.h  statement_context.h  symbol_tables.h  types.h  value.h
includes/tokens/: combination_kind.h  specifier_combination.h  token.h
src/lex/: lex.cpp
src/parser/: parser.cpp
src/sema/: Sema.cpp  SymbolTable.cpp  ast.cpp  ast2.h  qualifiedType.cpp  symbol_tables.cpp  types.cpp  value.cpp
src/tools/: first_set_generator.cpp  first_set_generator.h  main.cpp
